apps/monitoring/base/prometheus/prometheus-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitoring
spec:
  selector:
    prometheus: prometheus-persistant
  type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
  # loadBalancerIP:  # Assigned by LoadBalancer
